[package]
name = "traity"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
description = "A crate to treat your traits or trait your treats ;)"
publish = true
license-file = "LICENSE"
repository = "https://github.com/TriedWorks/traity"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
